2006-06-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_enhanced_open): Reset to _default_ font, not
	_current_ font!   Bug #1510055

2006-06-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c src/show.c: Less alarming error message if deprecated syntax
	is detected. Undeprecate "set key {below|above}".
	Bug #1514614.

	* tutorial/Makefile.am.in eg4.plt eg5.plt eg6.plt eg7.plt test.plt 
	tutorial.tex header.tex makefile.dst linepoin.plot (removed):
	Replace deprecated syntax in tex example plots. Add an epslatex sample.

	* src/save.c: Add missing newline after 'set pm3d depthorder'.

	* docs/gnuplot.doc docs/gnuplot-ja.doc: Refer to current version as
	4.2 rather than 4.1.

2006-06-29  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/airfoil.dem histograms.dem histograms2.dem image.dem multiplt.dem
	random.dem simple.dem starmap.dem: 
	Small changes to ensure demos do not use deprecated syntax.

	* docs/gnuplot.doc: Clean up "set title" and "set xlabel" and remove
	any examples with non up-to-date syntax.

2006-06-29  Petr Mikulik  <mikulik@physics.muni.cz>

	SF Patch [1488448] User-available GPVAL_ variables

	* NEWS docs/gnuplot.doc src/command.c src/eval.c src/eval.h src/plot.c
	src/plot2d.c src/plot3d.c src/save.c src/set.c src/show.c src/unset.c:
	New routine update_gpval_variables() to create and update autogenerated
	read-only GPVAL_ variables, and its callers. New command option
	'show variables all'.

2006-06-28  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/history.c (write_history_n): Account for the case where the
	number of history entries is less than what the user asked for.

2006-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term) term/x11.trm: The x11 terminal driver has
	been carrying around two copies of TERM_TABLE, one named "x11" and
	the other named "X11". But the "X11" copy has suffered from bit rot.
	Delete this redundant copy, and instead replace "X11" with "x11"