@@ -1,3 +1,8 @@
+2006-06-30  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/eval.c (update_gpval_variables): Added automatic read-only
+	variables GPVAL_VERSION and GPVAL_PATCHLEVEL.
+
 2006-06-29  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* term/win.trm (WIN_enhanced_open): Reset to _default_ font, not
